Implement InterfaceTemplate scalar presence
